css/style.css
/* ... */
.nav-menu ul {
  margin: 4px 0 0 0;
  padding: 10px;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  background: #fff;
}

.nav-menu ul li {
  transition: 0.3s;
}

.nav-menu ul li a {
  padding: 10px;
  color: #333;
  transition: 0.3s;
  display: block;
  font-size: 13px;
  text-transform: none;
}

.nav-menu ul li:hover > a {
  color: var(--secondary-color);
}

.nav-menu ul ul {
  margin: 0;
}

/* Mobile Nav Toggle */
#mobile-nav-toggle {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 999;
  /* margin: 20px 20px 0 0; */
  border: 0;
  background: none;
  font-size: 24px;
  display: none;
  transition: all 0.4s;
  outline: none;
  cursor: pointer;
}

#mobile-nav-toggle i {
  color: #fff;
}

/* Mobile Nav Styling */
#mobile-nav {
  position: absolute;
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(52, 59, 64, 0.9);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;
}

#mobile-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

#mobile-nav ul li {
  position: relative;
}

#mobile-nav ul li a {
  color: #fff;
  font-size: 16px;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
}

#mobile-nav ul li a:hover {
  color: #fff;
}

#mobile-nav ul li li {
  padding-left: 30px;
}

#mobile-nav ul .menu-has-children i {
  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: #fff;
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
  color: var(--secondary-color);
}

#mobile-nav ul .menu-item-active {
  color: var(--secondary-color);
}

#mobile-body-overly {
  width: 100%;
  height: 100%;
  z-index: 997;
  top: 0;
  left: 0;
  position: relative;
  background: rgba(52, 59, 64, 0.9);
  display: none;
}

/* Mobile Nav body classes */
body.mobile-nav-active {
  overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
  left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
  color: #fff;
}

/*--------------------------------------------------------------
# Sections
--------------------------------------------------------------*/
/* Sections Header
--------------------------------*/
.section-header .section-title {
  font-size: 32px;
  color: #111;
  text-align: center;
  font-weight: 400;
}

.section-header .section-divider {
  display: block;
  width: 60px;
  height: 3px;
  background: linear-gradient(45deg, var(--primary-color) 0%, var(--secondary-color) 100%);
  margin: 0 auto;
  margin-bottom: 20px;
}

/* Section with background
--------------------------------*/
.section-bg {
  background: #eff5f5;
}

/* About Us Section
--------------------------------*/
#about {
  padding: 60px 0 60px 0;
}

#about .about-img img {
  margin-left: 20px;
  max-width: 80%;
  max-height: 50%;
  /* margin: auto; */
  /* padding: 0 0 100px 100px; */
  /* margin: 0;
  position: absolute;
  top: 40%;
  left: 50%;
  -ms-transform: translate(-40%, -50%);
  transform: translate(-40%, -50%); */
}
/* 
@media (max-width: 768px) {
  #about .about-img {
    height: auto;
  }
  #about .about-img img {
    margin-left: 0;
    padding-bottom: 30px;
  }
} */

/* #about .content p {
  line-height: 26px;
  text-align: justify;
}

#about .content p:last-child {
  margin-bottom: 0;
}

#about .content i {
  font-size: 20px;
  padding-right: 4px;
  color: var(--secondary-color);
}

#about .content ul {
  list-style: none;
  padding: 0;
  padding: 15px;
}

#about .content ul li {
  padding-bottom: 10px;
} */



/* Product Featuress Section
--------------------------------*/
#features {
  background: #fff;
  padding: 60px 0;
}

#features .features-img {
  text-align: center;
  padding-top: 20px;
}

@media (min-width: 769px) {
  #features .features-img {
    padding-top: 120px;
    margin-top: -200px;
  }
}

#features .features-img img {
  max-width: 100%;
}

#features .box {
  margin-bottom: 15px;
  text-align: center;
}

#features .icon {
  margin-bottom: 10px;
}

#features .icon i {
  color: #666666;
  font-size: 40px;
  transition: 0.5s;
}

#features .icon i:before {
  background: var(--secondary-color);
  background: linear-gradient(45deg, var(--secondary-color) 0%, #55fabe 100%);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#features .title {
  font-weight: 300;
  margin-bottom: 15px;
  font-size: 22px;
}

#features .title a {
  color: #111;
}

#features .description {
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 10px;
}

.section-description {
  padding-bottom: 10px;
  text-align: center;
}

.features-row {
  padding: 60px 0 30px 0;
}

.features-row p ul {
  padding: 0px;
  text-align: justify;
}

#advanced-features i {
  color: #666666;
  font-size: 64px;
  transition: 0.5s;
  float: left;
  padding: 0 15px 0px 0;
  line-height: 1;
}

#advanced-features i:before {
  background: var(--secondary-color);
  background: linear-gradient(45deg, var(--secondary-color) 0%, #55fabe 100%);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#advanced-features .advanced-feature-img-right {
  max-width: 100%;
  max-height: 80%;
  float: right;
  /* padding: 5%; */
}

#advanced-features .advanced-feature-img-left {
  max-width: 100%;
  max-height: 80%;
  float: left;
  /* padding: 5%; */
}

@media (max-width: 1000px) {
  #advanced-features .advanced-feature-img-right, #advanced-features .advanced-feature-img-left {
    max-width: 50%;
    margin: 0 25% 0 25%;
    float: none;
    /* padding: 0 0 30px 0; */
  }
}

#advanced-features .advanced-feature-bullet {
  font-weight: bold;
}

.badge-img {
  max-width: 100%;
  max-height: 40vh;
}

.badge-wrapper{
  height: 100%; 
  padding-bottom: 30px;
  text-align: center;
}

.badge-left{
  float: left;
  padding-right: 30px;

}

.badge-right{
  float: right;
  padding-left: 30px;
}
/* ... */

